--- a/configs/dell-vostro-2520.config
+++ b/configs/dell-vostro-2520.config
@@ -1820,7 +1820,7 @@ CONFIG_WLAN=y
 # CONFIG_IPW2100 is not set
 CONFIG_IPW2200=m
 # CONFIG_IPW2200_MONITOR is not set
-CONFIG_IPW2200_QOS=y
+# CONFIG_IPW2200_QOS is not set
 # CONFIG_IPW2200_DEBUG is not set
 CONFIG_LIBIPW=m
 # CONFIG_LIBIPW_DEBUG is not set
@@ -3499,7 +3499,7 @@ CONFIG_USBIP_HOST=m
 # CONFIG_COMEDI is not set
 # CONFIG_ASUS_OLED is not set
 # CONFIG_R8187SE is not set
-CONFIG_RTL8192U=m
+# CONFIG_RTL8192U is not set
 # CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 CONFIG_RTS5139=m
